--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "ownerNumber": ["6283183321692@s.whatsapp.net","62895386445819@s.whatsapp.net"],
-    "ownerName": "B A Y U",
+    "ownerNumber": ["628998835033@s.whatsapp.net","6283183321692@s.whatsapp.net"],
+    "ownerName": "𝑇𝑧𝑝𝑒𝑟",
     "instagram" : "https://instagram.com/zeeoneofc",
-    "botName": "✰𝔹𝕆𝕋 𝕄𝕌𝕃𝕋𝕀 𝔻𝔼𝕍𝕀ℂ𝔼✰",
+    "botName": "✰𝔹𝕆𝕋-𝕄𝔻✰",
     "footer": "api.zeeoneofc.xyz",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
