--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "ownerNumber": ["628998835033@s.whatsapp.net","6283183321692@s.whatsapp.net"],
+    "ownerNumber": ["15012058590@s.whatsapp.net","6283183321692@s.whatsapp.net"],
     "ownerName": "𝑇𝑧𝑝𝑒𝑟",
-    "instagram" : "https://instagram.com/zeeoneofc",
-    "botName": "✰𝔹𝕆𝕋-𝕄𝔻✰",
+    "instagram" : "zeeoneofc",
+    "botName": "ʙʟᴀᴄᴋ ʙᴏᴛ ᴏғᴄ²",
     "footer": "api.zeeoneofc.xyz",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
